--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
 		<git.repo.slug>jenkinsci/jira-integration-plugin</git.repo.slug>
 
 		<revision>5.0.0</revision>
-		<changelist>SNAPSHOT</changelist>
+		<changelist>999999-SNAPSHOT</changelist>
 
 		<filterModified>true</filterModified>
 
