--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.jenkins.plugins</groupId>
 			<artifactId>okhttp-api</artifactId>
 			<exclusions>
