--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,17 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>io.jenkins.configuration-as-code</groupId>
+			<artifactId>test-harness</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jetbrains</groupId>
+					<artifactId>annotations</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
 			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>jackson2-api</artifactId>
 		</dependency>
