--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.jenkins-ci.plugins</groupId>
 		<artifactId>plugin</artifactId>
-		<version>4.55</version>
+		<version>4.71</version>
 	</parent>
 	<groupId>io.jenkins.plugins</groupId>
 	<artifactId>jira-integration</artifactId>
@@ -33,11 +33,11 @@
 
 	<properties>
 		<plugin.name>Jira Integration</plugin.name>
-		<plugin.description>Jenkins plugin for integrating with Jira Server, Data Center and Connect.</plugin.description>
+		<plugin.description>Jenkins plugin for integrating with Jira Server, Data Center and Cloud.</plugin.description>
 		<documentation.url>https://github.com/${git.repo.slug}</documentation.url>
 		<git.repo.slug>jenkinsci/jira-integration-plugin</git.repo.slug>
 
-		<revision>5.1.0</revision>
+		<revision>5.2.0</revision>
 		<changelist>999999-SNAPSHOT</changelist>
 
 		<filterModified>true</filterModified>
@@ -46,6 +46,10 @@
 		<jenkins.baseline>2.361</jenkins.baseline>
 		<jenkins.version>${jenkins.baseline}.4</jenkins.version>
 		<job-dsl.version>1.81</job-dsl.version>
+		<ngrok.version>0.3.1</ngrok.version>
+		<slf4jVersion>2.0.6</slf4jVersion>
+
+		<useBeta>true</useBeta>
 	</properties>
 
 	<dependencyManagement>
@@ -56,6 +60,52 @@
 				<version>1841.v7b_22c5218e1a</version>
 				<scope>import</scope>
 				<type>pom</type>
+			</dependency>
+
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>3.12.0</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>jcl-over-slf4j</artifactId>
+				<version>${slf4jVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>log4j-over-slf4j</artifactId>
+				<version>${slf4jVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${slf4jVersion}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-jdk14</artifactId>
+				<version>${slf4jVersion}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.activation</groupId>
+				<artifactId>javax.activation-api</artifactId>
+				<version>1.2.0</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.annotation</groupId>
+				<artifactId>javax.annotation-api</artifactId>
+				<version>1.3.2</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
+				<groupId>javax.inject</groupId>
+				<artifactId>javax.inject</artifactId>
+				<version>1</version>
+				<scope>provided</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -78,18 +128,29 @@
 			<groupId>org.marvelution.jji.components</groupId>
 			<artifactId>model-parsers</artifactId>
 			<version>${jenkins.integration.common.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>org.apache.commons</groupId>
-					<artifactId>commons-lang3</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>3.12.0</version>
+			<groupId>com.ngrok</groupId>
+			<artifactId>ngrok-java</artifactId>
+			<version>${ngrok.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
 		</dependency>
 
 		<dependency>
@@ -171,6 +232,85 @@
 			<artifactId>guice</artifactId>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<extensions>
+			<extension>
+				<groupId>kr.motd.maven</groupId>
+				<artifactId>os-maven-plugin</artifactId>
+				<version>1.7.1</version>
+			</extension>
+		</extensions>
+		<plugins>
+			<plugin>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-ngrok-native</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.outputDirectory}/ngrok/</outputDirectory>
+							<stripVersion>true</stripVersion>
+							<artifactItems>
+								<artifactItem>
+									<groupId>com.ngrok</groupId>
+									<artifactId>ngrok-java-native</artifactId>
+									<version>${ngrok.version}</version>
+									<classifier>linux-x86</classifier>
+								</artifactItem>
+								<artifactItem>
+									<groupId>com.ngrok</groupId>
+									<artifactId>ngrok-java-native</artifactId>
+									<version>${ngrok.version}</version>
+									<classifier>linux-x86_64</classifier>
+								</artifactItem>
+								<artifactItem>
+									<groupId>com.ngrok</groupId>
+									<artifactId>ngrok-java-native</artifactId>
+									<version>${ngrok.version}</version>
+									<classifier>linux-aarch64</classifier>
+								</artifactItem>
+								<artifactItem>
+									<groupId>com.ngrok</groupId>
+									<artifactId>ngrok-java-native</artifactId>
+									<version>${ngrok.version}</version>
+									<classifier>windows-x86_32</classifier>
+								</artifactItem>
+								<artifactItem>
+									<groupId>com.ngrok</groupId>
+									<artifactId>ngrok-java-native</artifactId>
+									<version>${ngrok.version}</version>
+									<classifier>windows-x86_64</classifier>
+								</artifactItem>
+								<artifactItem>
+									<groupId>com.ngrok</groupId>
+									<artifactId>ngrok-java-native</artifactId>
+									<version>${ngrok.version}</version>
+									<classifier>osx-x86_64</classifier>
+								</artifactItem>
+								<artifactItem>
+									<groupId>com.ngrok</groupId>
+									<artifactId>ngrok-java-native</artifactId>
+									<version>${ngrok.version}</version>
+									<classifier>osx-aarch64</classifier>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.jenkins-ci.tools</groupId>
+				<artifactId>maven-hpi-plugin</artifactId>
+				<configuration>
+					<pluginFirstClassLoader>true</pluginFirstClassLoader>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<repositories>
 		<repository>
