--- a/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
+++ b/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
@@ -8,3 +8,4 @@ actions=Actions
 navigate.to.site=Navigate to Site
 register.site=Register Site
 refresh.site.tunnel=Refresh Tunnel
+site.tunnel.connect.error=Tunnel Connection Error
