--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<jenkins.baseline>2.361</jenkins.baseline>
 		<jenkins.version>${jenkins.baseline}.4</jenkins.version>
 		<job-dsl.version>1.81</job-dsl.version>
-		<ngrok.version>0.3.1</ngrok.version>
+		<ngrok.version>0.3.3</ngrok.version>
 		<slf4jVersion>2.0.6</slf4jVersion>
 
 		<useBeta>true</useBeta>
@@ -128,6 +128,12 @@
 			<groupId>org.marvelution.jji.components</groupId>
 			<artifactId>model-parsers</artifactId>
 			<version>${jenkins.integration.common.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.eclipse.parsson</groupId>
+			<artifactId>parsson</artifactId>
+			<version>1.1.1</version>
 		</dependency>
 
 		<dependency>
@@ -252,14 +258,14 @@
 							<goal>copy</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.outputDirectory}/ngrok/</outputDirectory>
+							<outputDirectory>${project.basedir}/src/main/webapp/WEB-INF/ngrok/</outputDirectory>
 							<stripVersion>true</stripVersion>
 							<artifactItems>
 								<artifactItem>
 									<groupId>com.ngrok</groupId>
 									<artifactId>ngrok-java-native</artifactId>
 									<version>${ngrok.version}</version>
-									<classifier>linux-x86</classifier>
+									<classifier>linux-x86_32</classifier>
 								</artifactItem>
 								<artifactItem>
 									<groupId>com.ngrok</groupId>
@@ -271,7 +277,7 @@
 									<groupId>com.ngrok</groupId>
 									<artifactId>ngrok-java-native</artifactId>
 									<version>${ngrok.version}</version>
-									<classifier>linux-aarch64</classifier>
+									<classifier>linux-aarch_64</classifier>
 								</artifactItem>
 								<artifactItem>
 									<groupId>com.ngrok</groupId>
@@ -295,7 +301,7 @@
 									<groupId>com.ngrok</groupId>
 									<artifactId>ngrok-java-native</artifactId>
 									<version>${ngrok.version}</version>
-									<classifier>osx-aarch64</classifier>
+									<classifier>osx-aarch_64</classifier>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
