--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,15 @@
         </extensions>
         <plugins>
             <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>no-snapshots-in-release</id>
+                        <phase>not-valid</phase>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
