--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,16 @@
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>4.71</version>
+        <version>5.2</version>
+        <relativePath />
     </parent>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>jira-integration</artifactId>
     <version>${revision}-${changelist}</version>
     <packaging>hpi</packaging>
 
-    <name>${plugin.name}</name>
-    <description>${plugin.description}</description>
-    <url>${documentation.url}</url>
+    <name>Jira Integration</name>
+    <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
     <inceptionYear>2012</inceptionYear>
     <licenses>
         <license>
@@ -26,16 +26,14 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:https://github.com/${git.repo.slug}.git</connection>
-        <developerConnection>scm:git:git@github.com:${git.repo.slug}.git</developerConnection>
-        <url>https://github.com/${git.repo.slug}</url>
+        <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+        <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
+        <url>https://github.com/${gitHubRepo}</url>
+        <tag>${scmTag}</tag>
     </scm>
 
     <properties>
-        <plugin.name>Jira Integration</plugin.name>
-        <plugin.description>Jenkins plugin for integrating with Jira Server, Data Center and Cloud.</plugin.description>
-        <documentation.url>https://github.com/${git.repo.slug}</documentation.url>
-        <git.repo.slug>jenkinsci/jira-integration-plugin</git.repo.slug>
+        <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
 
         <revision>5.3.0</revision>
         <changelist>999999-SNAPSHOT</changelist>
@@ -43,9 +41,8 @@
         <filterModified>true</filterModified>
 
         <jenkins.integration.common.version>1.62-SNAPSHOT</jenkins.integration.common.version>
-        <jenkins.baseline>2.361</jenkins.baseline>
-        <jenkins.version>${jenkins.baseline}.4</jenkins.version>
-        <job-dsl.version>1.81</job-dsl.version>
+        <jenkins.baseline>2.479</jenkins.baseline>
+        <jenkins.version>${jenkins.baseline}.1</jenkins.version>
         <ngrok.version>1.0.1</ngrok.version>
         <slf4jVersion>2.0.6</slf4jVersion>
 
@@ -57,7 +54,7 @@
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
                 <artifactId>bom-${jenkins.baseline}.x</artifactId>
-                <version>1841.v7b_22c5218e1a</version>
+                <version>3613.v584fca_12cf5c</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
@@ -205,20 +202,7 @@
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
             <artifactId>job-dsl</artifactId>
-            <version>${job-dsl.version}</version>
             <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.jenkins-ci.plugins</groupId>
-            <artifactId>job-dsl-core</artifactId>
-            <version>${job-dsl.version}</version>
-            <scope>provided</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>*</groupId>
-                    <artifactId>xstream</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jenkins-ci.plugins</groupId>
@@ -237,10 +221,6 @@
             <artifactId>assertj-core</artifactId>
             <version>3.23.1</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
         </dependency>
     </dependencies>
 
