--- a/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
+++ b/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
@@ -1,6 +1,9 @@
 title=Jira Integration for Jenkins
 no.sites=No Jira Sites available.
 remove.site=Remove Site
+add.site=Add Site
+refresh.sites=Refresh Sites
+site.disabled=Site is disabled, refresh all sites to see if it can be enabled again, or refer to the logs for details.
 remove.failed=Failed to delete Site. Please try again later.
 name=Name
 integration.url=Integration URL
