--- a/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
+++ b/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
@@ -4,6 +4,7 @@ remove.site=Remove Site
 add.site=Add Site
 refresh.sites=Refresh Sites
 site.disabled=Site is disabled, refresh all sites to see if it can be enabled again, or refer to the logs for details.
+site.out.of.date=Site is out-of-date, consider updating it to make sure you are not missing out on new features and critical fixes!
 remove.failed=Failed to delete Site. Please try again later.
 name=Name
 integration.url=Integration URL
