App renamed to Jenkins for Jira

--- a/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
+++ b/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
@@ -1,4 +1,4 @@
-title=Jira Integration for Jenkins
+title=Jira for Jenkins
 no.sites=No Jira Sites available.
 remove.site=Remove Site
 add.site=Add Site
