--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,8 @@
         <slf4jVersion>2.0.6</slf4jVersion>
 
         <useBeta>true</useBeta>
+
+        <jenkins.home>${project.basedir}/work</jenkins.home>
     </properties>
 
     <dependencyManagement>
@@ -328,6 +330,7 @@
                 <configuration>
                     <pluginFirstClassLoader>true</pluginFirstClassLoader>
                     <defaultPort>8080</defaultPort>
+                    <jenkinsHome>${jenkins.home}</jenkinsHome>
                     <webApp>
                         <contextPath>/</contextPath>
                     </webApp>
