JJI-899 - Support alternative method for manual registration of a Jira site with administrator monitor

--- a/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
+++ b/src/main/resources/org/marvelution/jji/management/JiraSiteManagement/index.properties
@@ -1,6 +1,10 @@
 title=Jira Integration for Jenkins
 no.sites=No Jira Sites available.
 remove.site=Remove Site
+add.site=Add Site
+refresh.sites=Refresh Sites
+site.disabled=Site is disabled, refresh all sites to see if it can be enabled again, or refer to the logs for details.
+site.out.of.date=Site is out-of-date, consider updating it to make sure you are not missing out on new features and critical fixes!
 remove.failed=Failed to delete Site. Please try again later.
 name=Name
 integration.url=Integration URL
