JJI-943 - Use new http clients to make sure any proxy changes are picked up

--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
         <documentation.url>https://github.com/${git.repo.slug}</documentation.url>
         <git.repo.slug>jenkinsci/jira-integration-plugin</git.repo.slug>
 
-        <revision>5.4.1</revision>
+        <revision>5.4.2</revision>
         <changelist>999999-SNAPSHOT</changelist>
 
         <filterModified>true</filterModified>
@@ -260,7 +260,7 @@
                 <executions>
                     <execution>
                         <id>no-snapshots-in-release</id>
-                        <phase>not-valid</phase>
+                        <phase>none</phase>
                     </execution>
                 </executions>
             </plugin>
